MICRO FIX on chat msg width too small on mac

--- a/front_end/src/style/Chat.css
+++ b/front_end/src/style/Chat.css
@@ -102,7 +102,7 @@
 .sentmessage {
   align-self: flex-end;
   background-color: #b9d9eb;
-  max-width: 25em;
+  max-width: 30em;
   padding: 0.125em 2.5em;
   border-radius: 1rem;
   box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.3),
@@ -114,7 +114,7 @@
   background-color: #0bda51;
   margin-bottom: 2px;
   align-self: flex-start;
-  max-width: 25em;
+  max-width: 30em;
   padding: 0.125em 2.5em;
   border-radius: 1rem;
   box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.3),
